--- a/03-paisesApp/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/03-paisesApp/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,41 +1,42 @@
-<h2>Por País</h2>
-<hr>
-
-<div class="row">
-    <div class="col">
-        <form (ngSubmit)="buscar()" autocomplete="off">
-            <input type="text" name="termino" class="form-control" [(ngModel)]="termino" placeholder="Bucar país...">
-        </form>
+<div class="animate__animated animate__fadeIn">
+    <h2>Por País</h2>
+    <hr>
+    
+    <div class="row">
+        <div class="col">
+            <app-pais-input 
+                (onEnter)="buscar($event)"
+                (onDebounce)="sugerencias($event)"
+                placeholder="Buscar país...">
+            </app-pais-input>
+        </div>
     </div>
+    
+    <ul *ngIf="mostrarSugerencias" class="list-group">
+        <li *ngFor="let pais of paisesSugeridos"
+            class="list-group-item list-group-item-action">
+            <a  [routerLink]="['/pais', pais.alpha2Code]"
+                class="nav-link">
+                {{pais.name}}
+            </a>
+        </li>
+        <li class="list-group-item list-group-item-action"
+            (click)="buscarSugerido(termino)">
+            <a class="nav-link">
+                Buscar "{{termino}}""
+            </a>
+        </li>
+    </ul>
+
+    <hr>
 </div>
 
-<hr>
-
-<div class="alert alert-danger">
-    No se encontró nada con el término
+<div *ngIf="hayError" class="alert alert-danger">
+    No se encontró nada con el término {{termino}}
 </div>
 
-<div class="row">
+<div *ngIf="paises.length > 0" class="row">
     <div class="col">
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th> # </th>
-                    <th> Bandera </th>
-                    <th> Nombre </th>
-                    <th> Población </th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th> 1 </th>
-                    <th> bandera </th>
-                    <th> nombre </th>
-                    <th> 12342353 </th>
-                    <th> <a href="">Ver...</a></th>
-                </tr>
-            </tbody>
-        </table>
+        <app-pais-tabla [paises]="paises"></app-pais-tabla>
     </div>
 </div>
