--- a/03-paisesApp/src/app/pais/pages/por-region/por-region.component.html
+++ b/03-paisesApp/src/app/pais/pages/por-region/por-region.component.html
@@ -1,1 +1,22 @@
-<p>por-region works!</p>
+<div class="animate__animated animate__fadeIn">
+    <h3>Buscar por region <small> {{regionActiva | titlecase}} </small></h3>
+    <hr>
+    
+    <h5>Seleccione la región</h5>
+    <!-- [class.btn-primary] = "region === regionActiva" -->
+    <div class="row">
+        <div class="col">
+            <button *ngFor="let region of regiones"
+                    [class] = " (region === regionActiva) ? 'btn btn-primary': 'btn btn-outline-primary'"
+                    (click)="activarRegion(region)">
+                {{region | titlecase}}
+            </button>
+        </div>
+    </div>
+</div>
+
+<div *ngIf="paises.length > 0" class="row">
+    <div class="col">
+        <app-pais-tabla [paises]="paises"></app-pais-tabla>
+    </div>
+</div>
